[package]
name = "webtools"
version = "0.1.0"
authors = ["Max Plutonium <plutonium.max@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = "0.16.1"
chrono = "0.4.10"
clap = "2.33.0"
fstrings = "0.2.2"
fern = { version = "0.5", features = ["colored"] }
futures = "0.3.4"
log = "0.4.8"
rand = "0.7.3"
reqwest = { version = "0.10.2", features = ["json"] }
select = "0.4.3"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = { version = "1.0.48", default-features = false, features = ["alloc"] }
tokio = "0.2.11"
url = "2.1.1"
